--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.16.1",
     "webpack-cli": "^3.0.8"
   },
